--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/dist/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/app/scss/style.css">
     <title>Jen Design | Axlogistics landing page</title>
 </head>
 <body>
-    <!-- Your content goes here -->
+    <header class="header">
+        <nav class="flex flex-jc-sb flex-ai-c">
+            <a href="/" class="header__logo">
+                <img src="assets/Logo__ax.svg" alt="Axlogistics">
+            </a>
+
+            <a href="#" class="header__menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </nav>
+
+        <div class="header__links hide-for-mobile">
+            <a href="#">Home</a><a href="#">About Us</a><a href="#">Services</a
+            ><a href="#">Sign Up</a>
+        </div>
+    </header>
+
+    Super-fast instant and time-saving door to door delivery service in your region.
     <script src="/app/js/script.js"></script>
 </body>
 </html>
