Day one take two

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 <span></span>
                 <span></span>
             </a>
+
+            <a href="#" class="button header__cta hide-for-mobile">
+                Login
+            </a>
         </nav>
 
         <div class="header__links hide-for-mobile">
