--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
                 <img src="assets/Logo__ax.svg" alt="Axlogistics">
             </a>
 
-            <a href="#" class="header__menu">
+            <a href="#" class="header__menu hide-for-desktop">
                 <span></span>
                 <span></span>
                 <span></span>
             </a>
+
+            <div class="hide-for-mobile">
+                <a href="#" class="header__links">Home</a><a href="#" class="header__links">About Us</a><a href="#" class="header__links">Services</a><a href="#" class="header__links">Sign Up</a>
+            </div>
 
             <a href="#" class="button header__cta hide-for-mobile">
                 Login
             </a>
+            
         </nav>
 
-        <div class="header__links hide-for-mobile">
-            <a href="#">Home</a><a href="#">About Us</a><a href="#">Services</a
-            ><a href="#">Sign Up</a>
-        </div>
     </header>
 
     Super-fast instant and time-saving door to door delivery service in your region.
