--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header class="header">
-        <div class="overlay"></div>
-        <nav class="flex flex-jc-sb flex-ai-c">
+        <div class="overlay has-fade"></div>
+        <nav class="container flex flex-jc-sb flex-ai-c">
             <a href="/" class="header__logo">
                 <img src="assets/Logo__ax.svg" alt="Axlogistics">
             </a>
@@ -36,7 +36,28 @@
             
         </nav>
 
+        <div class="header__content has-fade">
+            <a href="">Home</a>
+            <a href="">About Us</a>
+            <a href="">Services</a>
+            <a href="">Sign Up</a>
+        </div>
+
     </header>
+
+    <section class="hero">
+        <div class="hero__image">
+
+        </div>
+        <div class="hero__image">
+            <h1>
+                Super-fast instant and time-saving door to door delivery service in your region.
+            </h1>
+            <a href="#" class="button header__cta ">
+                Login
+            </a>
+        </div>
+    </section>
 
     Super-fast instant and time-saving door to door delivery service in your region.
     <script src="/app/js/script.js"></script>
