--- a/index.html
+++ b/index.html
@@ -45,21 +45,24 @@
 
     </header>
 
-    <section class="hero">
+    <section class="hero hero__background">
         <div class="hero__image">
-
+            
         </div>
-        <div class="hero__image">
-            <h1>
-                Super-fast instant and time-saving door to door delivery service in your region.
+        <div class="hero__text container">
+            <h1 class="colorh">
+                Super-fast instant and time-saving door to door <span style="color: hsl(214, 37%, 22%);">delivery service</span> in your region.
             </h1>
+            <p>
+                Experience the fastest shipping sservice, and get your delivery
+                at your doorstep.   
+            </p>
             <a href="#" class="button header__cta ">
-                Login
+                View Pricing
             </a>
         </div>
     </section>
 
-    Super-fast instant and time-saving door to door delivery service in your region.
     <script src="/app/js/script.js"></script>
 </body>
 </html>
