--- a/index.html
+++ b/index.html
@@ -55,22 +55,47 @@
                     Super-fast instant and time-saving door to door <span style="color: hsl(214, 37%, 22%);">delivery service</span> in your region.
                 </h1>
                 <p>
-                    Experience the fastest shipping sservice, and get your delivery
+                    Experience the fastest shipping service, and get your delivery
                     at your doorstep.   
                 </p>
 
-                <div class="flex flex-ai-c">
+                <div class="ctabtn">
                     <a href="#" class="button header__cta" style="margin-left: 0px;" >
                         View Pricing
                     </a>
 
-                    <a href="#" style="color: hsl(214, 37%, 22%);">
+                    <a href="#" style="color: hsl(214, 37%, 22%);" class=" hide-for-mobile" >
                         Learn more >
                     </a>
                 </div>
-               
-            </div>
+               <!-- <div class="">
+                   <div class="details">
+                       <h3>
+                           50+
+                       </h3>
+                       <p>
+                           Deliveries
+                       </p>
+                   </div>
+                   <div class="details">
+                       <h3>
+                           50+
+                       </h3>
+                       <p>
+                           Deliveries
+                       </p>
+                   </div>
+                   <div class="details">
+                       <h3>
+                           50+
+                       </h3>
+                       <p>
+                           Deliveries
+                       </p>
+                   </div> -->
 
+               </div>
+            </div>
         </div>
     </section>
 
