--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                         </a>
                     </div>
                     
-                    <img src="assets/Vector 2.svg" alt="" class="hero__vector">
+                    <img src="assets/Vector 2.svg" alt="" class="hero__vector hide-for-mobile">
                 </div>
             </div>
         </section>
 
-        <section class="features">
+        <section class="feature">
             <div class="container container--plr">
-                <div class="intro">
+                <div class="feature__intro">
                     <h2>
                         How it works
                     </h2>
@@ -112,18 +112,24 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                     </p>
                 </div>
-                <div class="services">
-                    <div class="">
-                        <h3>
+                <div class="feature__box">
+                    <div class="feature__item">
+                        <div class="feature__icon">
+                            <img src="assets/booking.svg" alt="Booking" >
+                        </div>
+                        <h3 class="feature__title">
                             Booking
                         </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                         </p>
                     </div>
-                    <div class="">
+                    <div class="feature__item bg">
+                        <div class="feature__icon">
+                            <img src="assets/packaging.svg" alt="Packaging">
+                        </div>
                         <div class="">
-                            <h3>
+                            <h3 class="feature__title">
                                 Packaging
                             </h3>
                             <p>
@@ -131,9 +137,12 @@
                             </p>
                         </div>
                     </div>
-                    <div class="">
+                    <div class="feature__item">
+                        <div class="feature__icon">
+                            <img src="assets/transport.svg" alt="Transportation">
+                        </div>
                         <div class="">
-                            <h3>
+                            <h3 class="feature__title">
                                 Transportation
                             </h3>
                             <p>
