--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                     <h2>
                         How it works
                     </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                    <p class="center">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     </p>
                 </div>
                 <div class="feature__box">
@@ -121,10 +121,10 @@
                             Booking
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
                     </div>
-                    <div class="feature__item bg">
+                    <div class="feature__item bg pack">
                         <div class="feature__icon">
                             <img src="assets/packaging.svg" alt="Packaging">
                         </div>
@@ -133,7 +133,7 @@
                                 Packaging
                             </h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             </p>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                                 Transportation
                             </h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             </p>
                         </div>
                     </div>
@@ -154,6 +154,38 @@
                 <a href="#" class="button header__cta" style="margin-left: 0px;" >
                     Learn more
                 </a>
+            </div>
+        </section>
+
+        <section class="choose">
+            <div class="container container--plr">
+                <div class="choose__intro">
+                    <h2>
+                        Why choose us
+                    </h2>
+                    <p class="center">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="choose__box">
+                    <div class="choose__image">
+                    </div>
+                    <div class="choose__text">
+                        <ul>
+                            <li>
+                                <h3>Affordable and Efficient</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </li>
+                            <li>
+                                <h3>24hrs at your Service</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </li>
+                            <li>
+                                <h3>Book us at your Convenience</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </li>
+                        </ul>
+                </div>
             </div>
         </section>
     </main>
