--- a/index.html
+++ b/index.html
@@ -188,6 +188,61 @@
                 </div>
             </div>
         </section>
+
+        <section class="services">
+            <div class="container container--plr">
+                <div class="services__intro">
+                    <h2>
+                        Our Services
+                    </h2>
+                    <p class="center">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="services__box">
+                    <div class="services__pic"></div>
+                    <div class="services__text gridser">
+                        <div class="flex flex-ai-c">
+                            <div class="custom-image services__image1">
+                            </div>
+                            <div class="">
+                                <h3>
+                                    Express Drop-off
+                                </h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex flex-ai-c">
+                            <div class="custom-image services__image2">
+                            </div>
+                            <div class="">
+                                <h3>
+                                    Warehouse
+                                </h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="flex flex-ai-c">
+                            <div class="custom-image services__image3">
+                            </div>
+                            <div class="">
+                                <h3>
+                                    24hrs Delivery
+                                </h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
     <script src="/app/js/script.js"></script>
