--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                 <div class="services__box">
                     <div class="services__pic"></div>
                     <div class="services__text gridser">
-                        <div class="flex flex-ai-c">
+                        <div class="services__flex flex-ai-c services__gap">
                             <div class="custom-image services__image1">
                             </div>
-                            <div class="">
+                            <div class="services__th">
                                 <h3>
                                     Express Drop-off
                                 </h3>
@@ -214,10 +214,10 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="flex flex-ai-c">
+                        <div class="services__flex flex-ai-c services__gap">
                             <div class="custom-image services__image2">
                             </div>
-                            <div class="">
+                            <div class="services__th">
                                 <h3>
                                     Warehouse
                                 </h3>
@@ -226,10 +226,10 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="flex flex-ai-c">
+                        <div class="services__flex flex-ai-c services__gap">
                             <div class="custom-image services__image3">
                             </div>
-                            <div class="">
+                            <div class="services__th">
                                 <h3>
                                     24hrs Delivery
                                 </h3>
@@ -238,6 +238,30 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="partners mb">
+            <div class="container container--plr">
+                <div class="partners__intro">
+                    <h2>
+                        Our Partners
+                    </h2>
+                </div>
+                <div class="partners__box">
+                    <div class="partners__logo">
+                        <img src="assets/hauwei.svg" alt="Hauwei" style= "height: 95px; width: 128px;">
+                    </div>
+                    <div class="partners__logo">
+                        <img src="assets/beats.svg" alt="Beat" style= "height: 85px; width: 85px;">
+                    </div>
+                    <div class="partners__logo">
+                        <img src="assets/pepsi.svg" alt="pepsi" style= "height: 106px; width: 106px;">
+                    </div>
+                    <div class="partners__logo">
+                        <img src="assets/dole.svg" alt="Dole" style= "height: 95px; width: 155px;">
                     </div>
                 </div>
             </div>
