--- a/index.html
+++ b/index.html
@@ -266,6 +266,42 @@
                 </div>
             </div>
         </section>
+
+        <section class="clients mb">
+            <div class="container container--plr">
+                <div class="clients__box">
+                    <div class="clients__intro">
+                        <h2>
+                            What Our Client Says About Us
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="clients__stories">
+                        <div class="clients__icon">
+                            <div class="clients__image1 clients-image"></div>
+    
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <h2>
+                                Jane Doll
+                            </h2>
+                        </div>
+                        <div class="clients__icon">
+                            <div class="clients__image2 clients-image"></div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <h2>
+                                John Doe
+                            </h2>
+                        </div>
+                </div>
+                </div>
+            </div>
+        </section>
         
     </main>
 
